--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
       <div class="total" id="total"></div>
 
-      <button class="wts">
+      <button class="wts" id="whatsapp-order-btn">
         Whatssapp
       </button>
 
